# ocpp-ws

./: .gitignore  CLIENT_HANDLE_USAGE.md  Cargo.toml  DATA_STORAGE_FEATURE.md  README.md  README_zh.md  URL_PATH_FEATURE.md  WS_SERVER_OPTIMIZATION.md  ws_README.md
cert_check/: Cargo.toml
cert_check/src/: main.rs
crate_cert/: README.md  ca.py  client.py  main.py  requester.py  requirements.txt  run_client.py  run_server.py  server.py  verify.py
examples/: client_data_demo.rs
ws-rs/: COMPRESSION.md  Cargo.toml  README.md  README_zh.md
ws-rs/examples/: client_handle_demo.rs  url_suffix_demo.rs
ws-rs/src/: client.rs  compression.rs  lib.rs  path_utils.rs  server.rs
ws_client/: Cargo.toml
ws_client/src/: main.rs
ws_lib/: Cargo.toml
ws_lib/src/: client.rs
ws_server/: Cargo.toml
ws_server/src/: main.rs
