[package]
name = "ws-rs"
version = "0.1.2"
edition = "2024"
authors = ["OCPP-rs Team"]
description = "WebSocket library for OCPP communications with TLS support"
repository = "https://github.com/ocpp-rs/ocpp-ws.git"
documentation = "https://docs.rs/ws-rs"
license = "MIT"
readme = "README.md"
keywords = ["websocket", "ocpp", "tls"]
categories = ["network-programming", "web-programming::websocket"]

# Documentation settings
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = [
    "rustls-tls-webpki-roots",
] }
tokio-rustls = "0.25.0"
futures-util = "0.3.30"
rustls = "0.22.2"
rustls-pemfile = "2.1.0"
log = "0.4.20"
env_logger = "0.11.2"
url = "2.5.0"
base64 = "0.22.1"

[features]
default = []
client = []
server = []
