[package]
name = "ws_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = [
    "rustls-tls-webpki-roots",
] }
tokio-rustls = "0.25.0"
futures-util = "0.3.30"
rustls = "0.22.2"
rustls-pemfile = "2.1.0"
log = "0.4.20"
env_logger = "0.11.2"
base64 = "0.22.1"
ws-rs = { path = "../ws-rs", features = ["server"] }
